--- a/cv-tailor/package.json
+++ b/cv-tailor/package.json
@@ -9,23 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/core": "^0.37.0",
     "@conform-to/react": "^1.11.0",
     "@conform-to/zod": "^1.11.0",
-    "@convex-dev/auth": "^0.0.90",
-    "@oslojs/crypto": "^1.0.1",
+    "@prisma/client": "^6.16.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/render": "^1.3.1",
+    "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.27.3",
-    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
+    "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.1.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
